<resources>
    <string name="app_name">Credit-Peso - Fast Cash and Peso Loan Online</string>
    <string name="start">Welcome To Credit-peso</string>
    <string name="description">null description</string>
    <string name="start_text">Quick access to unsecured loans .Interest rate of 3.5% and approved within 7 days.</string>
    <string name="tc"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_in">SIGN IN</string>
    <string name="easy_steps">SIMPLE STEPS TO GET PESO</string>
    <string name="new_member">New Member? Create Account</string>
    <string name="step1">1. Create your account</string>
    <string name="step2">2. Choose your loan amount and click request loan</string>
    <string name="step3">3. Wait for a confirmation message</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile Phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="identification_details">IDENTIFICATION DETAILS</string>
    <string name="security_text">Information you provide is encrypted and secured at all times</string>
    <string name="id_passport">ID Number / Passport</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="enter_password">Enter password</string>
    <string name="proceed">Proceed</string>
    <string name="loan_status">Already applied? Check loan status</string>
    <string name="purpose">i.e emergencies, business, school fees</string>
    <string name="purpose_of_loan">PURPOSE OF  THE LOAN</string>
    <string name="loan_details">LOAN DETAILS</string>
    <string name="repayment_hint">Repayment(1–4 months)</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="claim_bonus">Claim Bonus</string>
    <string name="bonus_text">Like Our App!!!</string>
    <string name="request_received_text">Loan request received. You will get a confirmation message via SMS upon loan approval. Sometimes we experience long queue time but we are actively working to  minimize delays and serve you as soon as possible. Thank you</string>
    <string name="rate_us">Rate Us!</string>
    <string name="no_thanks">No Thank You</string>
    <string name="reward_text">If your really satisfied with our app and services please remember to rate us.</string>
    <string name="no_account_yet">No Account yet? Create one</string>
    <string name="login">Sign In</string>
    <string name="get_started">Get Started with PESO</string>
    <string name="tc_text">The collateral security to our loans is limited to national identification details you do provide . We also expect our esteemed customers to pay the loans in time in order to ensure smooth running of our operations . All loans are approved within 7 days . In case of any delay feel free to contact us. We do appreciate your membership as we continue to build on this app for our customers.</string>
    <string name="loan_status_check">Loan request received. Make Sure all details are correctly filled. You will get a confirmation message via sms upon loan approval.</string>
    <string name="got_it">Got It!</string>
    <string name="proceed_to_loans">Proceed To Loans</string>

    <string name="myPreferences">myPreferences</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="emailKey">emailKey</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="password">password</string>
    <string name="activity_banner_id">ca-app-pub-4235756897396648/1855673198</string>
    <string name="interstitial_full_screen">ca-app-pub-4235756897396648/3168754864</string>

</resources>
