<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoanDetailActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="169dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/new_imageview_style"
        android:contentDescription="@string/description"
        android:elevation="5dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.405"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/easy_step"
        android:text="@string/easy_steps"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        ads:layout_constraintTop_toBottomOf="@id/image"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_1"
        android:text="@string/step1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        ads:layout_constraintTop_toBottomOf="@id/easy_step"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"/>
    <TextView
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/step_2"
        android:text="@string/step2"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/step_1"
        ads:layout_constraintStart_toStartOf="@id/step_1"
        android:layout_marginTop="@dimen/margin_8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_3"
        android:text="@string/step3"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        ads:layout_constraintTop_toBottomOf="@id/step_2"
        ads:layout_constraintStart_toStartOf="@id/step_1"
        android:layout_marginTop="@dimen/margin_8dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:background="@drawable/new_button_style"
        android:onClick="signIn"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/step_3" />

    <TextView
        android:id="@+id/conditions_btn"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@android:color/transparent"
        android:text="@string/new_member"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="signUp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintBottom_toTopOf="@id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/sign_in_button" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/activity_banner_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>