<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoanPurposeActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="169dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/new_imageview_style"
        android:contentDescription="@string/description"
        android:elevation="5dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/purpose_of_loan_text"
        android:text="@string/purpose_of_loan"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        ads:layout_constraintTop_toBottomOf="@id/image"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/security_text"
        android:text="@string/security_text"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/purpose_of_loan_text"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/purpose_edittext"
        android:hint="@string/purpose"
        android:textStyle="bold"
        android:inputType="text"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/security_text"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/proceed_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/new_button_style"
        android:text="@string/proceed"
        android:onClick="proceed"
        android:textColor="@android:color/white"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/purpose_edittext" />
    <TextView
        android:id="@+id/loan_status"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/loan_status"
        android:onClick="loanStatusCheck"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/proceed_button" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/activity_banner_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>