<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RateActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="169dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/new_imageview_style"
        android:contentDescription="@string/description"
        android:elevation="5dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.336"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/reward_text"
        android:text="@string/reward_text"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/bonus_text"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bonus_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/bonus_text"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/image"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/decline_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/new_button_style"
        android:text="@string/no_thanks"
        android:onClick="decline"
        android:textColor="@android:color/white"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/reward_text" />
    <Button
        android:id="@+id/rate_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@drawable/new_button_style"
        android:text="@string/rate_us"
        android:onClick="rateUs"
        android:textColor="@android:color/white"
        ads:layout_constraintBottom_toTopOf="@id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/decline_button" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:layout_constraintTop_toBottomOf="@id/rate_button"
        ads:adUnitId="@string/activity_banner_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>