<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SignInActivity"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="169dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/new_imageview_style"
        android:contentDescription="@string/description"
        android:elevation="5dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.315"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_edittext"
        android:hint="@string/email"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/image"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_edittext"
        android:hint="@string/enter_password"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        ads:layout_constraintTop_toBottomOf="@id/email_edittext"
        ads:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/new_button_style"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@android:color/white"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/password_edittext" />
    <TextView
        android:id="@+id/no_account_yet"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/no_account_yet"
        android:onClick="noAccountYet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/login_button"
        ads:layout_constraintBottom_toTopOf="@id/adView"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:layout_constraintTop_toBottomOf="@id/no_account_yet"
        ads:adUnitId="@string/activity_banner_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>